--- a/react-es6/index.html
+++ b/react-es6/index.html
@@ -1,12 +1,10 @@
 <html>
   <head>
     <title>React Getting Started</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js">
-    </script>
-    <script type="text/jsx;harmony=true" src="app.jsx">
-    </script>
+    <script src="//cdn.bootcss.com/react/0.13.3/react.js"></script>
+    <script src="//cdn.bootcss.com/react/0.13.3/JSXTransformer.js"></script>
+    <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/jsx;harmony=true" src="app.jsx"></script>
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
